k8s/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: washify-gateway
  namespace: default
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    protocol: HTTP
    port: 80
