k8s/gateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: washify-dev-ns
  name: washify-routes
  namespace: default
spec:
  parentRefs:
  - name: washify-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/auth
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: auth-service
      port: 8000
      
  - matches:
    - path:
        type: PathPrefix
        value: /api/car-wash
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: car-wash-service
      port: 8000
      
  - matches:
    - path:
        type: PathPrefix
        value: /api/booking
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: booking-service
      port: 8000
      
  - matches:
    - path:
        type: PathPrefix
        value: /api/review
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: review-service
      port: 8000
      
  - matches:
    - path:
        type: PathPrefix
        value: /api/notification
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: notification-service
      port: 8000
      
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 80
